# Bitcoin-Layer-3

./: .gitignore  README.md  WHITEPAPER.md  pyproject.toml  retrieved.pfm  test-doc.pfm
l3/: __init__.py  anchor.py  cli.py  store.py
l3/_format/: __init__.py  document.py  reader.py  spec.py  writer.py
l3/api/: __init__.py  auth.py  handlers.py  invoices.py  server.py  watcher.py
l3/p2p/: __init__.py  connection.py  nostr.py  peer_manager.py  protocol.py  server.py  sync.py
l3/veilcloud/: __init__.py  access.py  audit.py  crypto.py  merkle.py  threshold.py
security_tests/: BLACK-TEAM-FULL-REPORT.md  BLACK-TEAM-REATTACK-R2-REPORT.md  BLACK-TEAM-REATTACK-R3-REPORT.md  BLACK-TEAM-REATTACK-REPORT.md  RED-TEAM-REMEDIATION-R2.md  RED-TEAM-REMEDIATION-R3.md  RED-TEAM-REMEDIATION-R4.md  RED-TEAM-REMEDIATION.md
tests/: test_anchor.py  test_api.py  test_p2p.py  test_veilcloud.py
